--- a/src/Monq.Models.Abstractions/Monq.Models.Abstractions.csproj
+++ b/src/Monq.Models.Abstractions/Monq.Models.Abstractions.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.1</Version>
+    <Version>1.1</Version>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>NorthRebel</Authors>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://gitlab.monq.ru/smon.monq.ru/libraries/Monq.Models.Abstractions</RepositoryUrl>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageTags>monq service-monitor</PackageTags>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
