[SMCORE-1176]  ⚡️ Произведено обновление до .NET Core 3.0 - 🔖 v3.0.0 - ⬆️ .gitlab-ci.yml v5.0 (spec) - ⬆️ System.ComponentModel.Annotations v4.6

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 **/*.xproj.user
 **/*.csproj.user
 **/aspnet_consul_config.json
+/.cr
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
+# ReSharper
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
