--- a/src/Monq.Models.Abstractions/Monq.Models.Abstractions.csproj
+++ b/src/Monq.Models.Abstractions/Monq.Models.Abstractions.csproj
@@ -1,20 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>2.1</Version>
+    <Version>3.0.0</Version>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>NorthRebel</Authors>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://gitlab.monq.ru/smon.monq.ru/libraries/Monq.Models.Abstractions</RepositoryUrl>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageTags>monq service-monitor</PackageTags>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <IsPackable>true</IsPackable>
+    <LangVersion>latest</LangVersion>
+    <Authors>NorthRebel</Authors>
+    <PackageId>Monq.Models.Abstractions</PackageId>
+    <PackageTags>monq service-monitor</PackageTags>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageProjectUrl>https://gitlab.monq.ru/smon.monq.ru/libraries/Monq.Models.Abstractions</PackageProjectUrl>
+    <Description>В библиотеке представлены примитивы входных моделей, а также кастомные атрибуты валидации.</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
