--- a/.github/workflows/netcorelibrary.yml
+++ b/.github/workflows/netcorelibrary.yml
@@ -18,8 +18,8 @@ jobs:
     # Set the type of machine to run on
     runs-on: ubuntu-latest
     env:
-      MAINAPP_ASP_PROJECT_PATH: "src/Monq.Core.MvcExtensions"
-      TEST_MAINAPP_ASP_PROJECT_PATH: "src/Monq.Core.MvcExtensions.Tests"
+      MAINAPP_ASP_PROJECT_PATH: "src/Monq.Models.Abstractions"
+      TEST_MAINAPP_ASP_PROJECT_PATH: "src/Monq.Models.Abstractions.Tests"
 
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
