--- a/src/Monq.Models.Abstractions/Monq.Models.Abstractions.csproj
+++ b/src/Monq.Models.Abstractions/Monq.Models.Abstractions.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>4.1.0</Version>
+    <Version>4.1.1</Version>
     <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     <Version Condition=" '$(VersionSuffix)' != '' ">$(Version)-$(VersionSuffix)</Version>
     <TargetFramework>netstandard2.0</TargetFramework>
